--- a/index.html
+++ b/index.html
@@ -43,17 +43,13 @@
                 <div class="sideMenuArea verticalMenu">
                     <a href="#" class="closeBtn">&times;</a>
                     <div class="logo">
-                        <a href="index.html">Stellar</a>
+                        <a href="index.html">maxmade</a>
                     </div>
                     <nav class="mainMenu">
                         <ul>
-                            <li class="active scroll has-child">
+                            <li class="active scroll">
                                 <a href="#home">Home</a>
-                                <ul>
-                                    <li><a href="index.html">Home Minimal</a></li>
-                                    <li><a href="index2.html">Home Agency</a></li>
-                                    <li><a href="index3.html">Home diagonal</a></li>
-                                </ul>
+
                             </li>
                             <li class="scroll"><a href="#features">Features</a></li>
                             <li class="scroll has-child">
@@ -75,19 +71,19 @@
                     </nav>
                     <div class="clearfix"></div>
                     <div class="headerSocial">
-                        <a class="fac" href="#"><i class="fa fa-facebook"></i></a>
-                        <a class="ins" href="#"><i class="fa fa-instagram"></i></a>
-                        <a class="lin" href="#"><i class="fa fa-linkedin"></i></a>
-                        <a class="goo" href="#"><i class="fa fa-google-plus"></i></a>
-                        <a class="twi" href="#"><i class="fa fa-twitter"></i></a>
-                        <a class="dri" href="#"><i class="fa fa-dribbble"></i></a>
+                        <a class="fac" href="#"><i class="fab fa-facebook"></i></a>
+                        <a class="ins" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="lin" href="#"><i class="fab fa-linkedin"></i></a>
+                        <a class="goo" href="#"><i class="fab fa-google-plus"></i></a>
+                        <a class="twi" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="dri" href="#"><i class="fab fa-dribbble"></i></a>
                     </div>
                 </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-sm-3">
                             <div class="logo">
-                                <a href="index.html">Stellar</a>
+                                <a href="index.html">maxmade</a>
                             </div>
                         </div>
                         <div class="col-lg-9 col-sm-9 horizontalmenu">
@@ -99,13 +95,9 @@
                             </div>
                             <nav class="mainMenu">
                                 <ul>
-                                    <li class="active scroll has-child">
+                                    <li class="active scroll">
                                         <a href="#home">Home</a>
-                                        <ul>
-                                            <li><a href="index.html">Home Minimal</a></li>
-                                            <li><a href="index2.html">Home Agency</a></li>
-                                            <li><a href="index3.html">Home diagonal</a></li>
-                                        </ul>
+
                                     </li>
                                     <li class="scroll"><a href="#features">Features</a></li>
                                     <li class="scroll has-child">
@@ -2414,16 +2406,16 @@
                         <div class="col-lg-12 text-center wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
                             <h2 class="sectionTitle2">
                                 <small>Say Hello!</small>
-                                We would love to hear from you.
+                                Love to hear from you.
                             </h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
                             <div class="conInfos2">
-                                <p class="pfirst"><i class="fa fa-phone"></i>1.800.321.4567-8</p>
-                                <p class="pMid"><i class="fa fa-envelope-o"></i>support@dotsquare.com</p>
-                                <p class="plast"><i class="fa fa-map-marker"></i>Some street, New York, USA</p>
+                                <p class="pfirst"><i class="fa fa-phone"></i>704.249.8084</p>
+                                <p class="pMid"><i class="fa fa-envelope-o"></i>max@deusxmax.com</p>
+                                <p class="plast"><i class="fa fa-map-marker"></i>Charlotte, NC, USA</p>
                             </div>
                         </div>
                     </div>
@@ -2453,17 +2445,17 @@
                     <div class="row">
                         <div class="col-lg-9 wow zoomIn" data-wow-duration="700ms" data-wow-delay="300ms">
                             <div class="copyRight">
-                                &copy; Stellar. All Rights Reserved.<span>|</span>Theme designed by Nasirwd.<span>|</span>nasfactor.com
+                                &copy; Maxmade. All Rights Reserved.<span>|</span>maxmade.app.com
                             </div>
                         </div>
                         <div class="col-lg-3 wow zoomIn" data-wow-duration="700ms" data-wow-delay="300ms">
                             <div class="footerSocial">
-                                <a class="fac" href="#"><i class="fa fa-facebook"></i></a>
-                                <a class="ins" href="#"><i class="fa fa-instagram"></i></a>
-                                <a class="lin" href="#"><i class="fa fa-linkedin"></i></a>
-                                <a class="goo" href="#"><i class="fa fa-google-plus"></i></a>
-                                <a class="twi" href="#"><i class="fa fa-twitter"></i></a>
-                                <a class="dri" href="#"><i class="fa fa-dribbble"></i></a>
+                                <a class="fac" href="#"><i class="fab fa-github"></i></a>
+                                <a class="ins" href="#"><i class="fab fa-codepen"></i></a>
+                                <a class="lin" href="#"><i class="fab fa-linkedin"></i></a>
+                                <a class="goo" href="#"><i class="fab fa-google-plus"></i></a>
+                                <a class="twi" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="dri" href="#"><i class="fab fa-dribbble"></i></a>
                             </div>
                         </div>
                     </div>
