--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                      data-start="1200"
                                      data-easing="Power4.easeOut">
                                     <div class="slid2s">
-                                        <h2>We Design Websites</h2>
+                                        <h2>gutes Design ist</h2>
                                     </div>
                                 </div>
                                 <div class="tp-caption sfb text-right homeOneSlider"
@@ -155,7 +155,7 @@
                                      data-start="1500"
                                      data-easing="Power4.easeOut">
                                     <div class="slid2s">
-                                        <h1>That Works</h1>
+                                        <h1>unobtrusive</h1>
                                     </div>
                                 </div>
                             </li>
@@ -170,7 +170,7 @@
                                      data-start="1200"
                                      data-easing="Power4.easeOut">
                                     <div class="slid2s">
-                                        <h2>We Develop Websites</h2>
+                                        <h2>Smarter</h2>
                                     </div>
                                 </div>
                                 <div class="tp-caption sfb text-right homeOneSlider"
@@ -182,7 +182,7 @@
                                      data-start="1500"
                                      data-easing="Power4.easeOut">
                                     <div class="slid2s">
-                                        <h1>That Nice</h1>
+                                        <h1>Not Harder</h1>
                                     </div>
                                 </div>
                             </li>
