cs page link fix

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <li class="scroll has-child">
                                 <a href="#portfolio">Portfolio</a>
                                 <ul>
-                                    <li><a href="singlefolio.html">Single Portfolio</a></li>
+                                    <li><a href="casestudy1.html">Case Study</a></li>
                                 </ul>
                             </li>
                             <li class="scroll"><a href="#team">Team</a></li>
